[package]
name = "cln-ntfy"
version = "0.1.0"
edition = "2021"
description = "Ntfy plugin for CLN"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"

[dependencies]
cln-plugin = "0.1"
log = "0.4"
ntfy = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
