[package]
name = "cln-ntfy"
version = "0.1.0"
edition = "2021"
description = "CLN plugin for ntfy"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://github.com/yukibtc/cln-ntfy"
repository = "https://github.com/yukibtc/cln-ntfy.git"
readme = "README.md"
keywords = ["cln", "ntfy", "bitcoin", "lightning"]

[dependencies]
cln-plugin = "0.1"
log = "0.4"
ntfy = "0.3"
serde_json = "1.0"
tokio = { version = "1.28", default-features = false, features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
